--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,15 +1,14 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "type": "builtin",        // Logo type: auto, builtin, small, file, etc.
-    "source": "fedora",      // Built-in logo name or file path
-    "width": 65,           // Width in characters
-    "height": 35,          // Height in characters
+    "type": "kitty", // Logo type: auto, builtin, small, file, etc.
+    "source": "~/.config/fastfetch/asa-mitaka2.png", // Built-in logo name or file path
+    "height": 15, // Height in characters
     "padding": {
-        "top": 0,          // Top padding
-        "left": 0,         // Left padding
-        "right": 2         // Right padding
-    }
+      "top": 2, // Top padding
+      "left": 3, // Left padding
+      "right": 3, // Right padding
+    },
   },
   "modules": [
     "title",
@@ -32,6 +31,6 @@
     "battery",
     "poweradapter",
     "break",
-    "colors"
-  ]
+    "colors",
+  ],
 }
